...
        super.viewDidLoad()
        // Убедимся, что нет сохраненного токена при открытии экрана
        OAuth2TokenStorage.shared.clearToken()
        
        configureBackButton()
        
        loginButton.accessibilityIdentifier = "Authenticate"
        loginButton.accessibilityLabel = "Authenticate"
    }
    
    private func switchToMainInterface() {
        guard let window = UIApplication.shared.windows.first else { return }
        let tabBarVC = UIStoryboard(name: "Main", bundle: .main)
...
