...
        likeButton.setImage(likeImage, for: .normal)
    }

    override func awakeFromNib() {
        super.awakeFromNib()
        // Идентификаторы для UI тестов
        self.accessibilityIdentifier = "feed cell"
        cellImage.translatesAutoresizingMaskIntoConstraints = false
        cellImage.contentMode = .scaleAspectFill
        cellImage.clipsToBounds = true
        
        // Установить accessibilityIdentifier один раз
        likeButton.accessibilityIdentifier = "like button"
    }
}

extension Date {
    func dateString() -> String {
        let dateFormatter = DateFormatter()
...
